<resources>
    <!--    Main app strings    -->
    <string name="app_name">Snag A Snag</string>
    <string name="title_activity_maps">Map</string>
    <string name="settings">Settings</string>
    <string name="toast_check_internet">No internet connection</string>


    <!--    Location permission    -->
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_rationale_location">Access to the location service is required to show your current location on the map.</string>
    <string name="location_permission_denied">This feature requires location permission to enable
        the \'my location\' layer. Please try again and grant access to use the location.\nIf the
        permission has been permanently denied, it can be enabled from the
        System Settings &gt; Apps &gt; \'Snag a Snag\'.</string>
    <string name="permission_required_toast">Location permission is required for this feature.</string>


    <!--   Toast messages for Input Text validation   -->
    <string name="toast_text_empty">is empty</string>
    <string name="toast_username_lacking_snag">Username must contain the word snag</string>
    <string name="toast_invalid_character">shouldn\'t contain special character</string>
    <string name="sizzle_name_field_name">Sizzle name</string>
    <string name="sizzle_address_field_name">Address</string>
    <string name="sizzle_desc_field_name">Description</string>
    <string name="username_field_name">Username</string>
    <string name="comment_field_name">Comment</string>


    <!--    Screen: Let's nag   -->
    <string name="lets_snag">Let\'s snag</string>
    <string name="snag_a_snag">Snag-A-Snag</string>


    <!--    Screen: Take the oath screen  -->
    <string name="take_the_oath">Take the oath</string>

    <string name="oath_title">
        <![CDATA[

        We need to make sure
        <br/>
        you\'re worthy of
        <br/>
        repping the <b>Snag Army</b>

        ]]>
    </string>
    <string name="hint_type_here">type here..</string>
    <string name="create_username_hint">
        <![CDATA[

    <b>Create your Snag Username</b>
    <br/>
    (it must contain the word <b>&quot;snag&quot;</b>)

        ]]>
    </string>


    <!--    Screen: Swear   -->
    <string name="i_do">I Do</string>
    <string name="swear_title">
        <![CDATA[

        Do you swear to the
        <br/>
        Snag Oath?
        ]]>
   </string>

    <string name="swear_body">
      <![CDATA[
        <i>Do you,</i> <b>%1$s,</b> <i>solemnly

         swear by the holy snag to discover

         and review honestly and to benefit all

         of snag-kind?</i>
    ]]>
    </string>


    <!--   Screen: Add sizzle   -->
    <string name="add_a_sizzle">Add A Sizzle</string>
    <string name="add_sizzle_note">The sizzle is marked at your location (You can move the marker around)</string>
    <string name="hint_sizzle_name">Sizzle name</string>
    <string name="hint_sizzle_address">Address</string>
    <string name="hint_sizzle_desc">Description</string>
    <string name="add_a_snag_cover_photo">Add a Snag cover photo</string>
    <string name="change_snag_cover_photo">Change Snag\'s cover photo</string>
    <string name="snag_it">Snag It</string>
    <string name="add_sizzle_alert">Select and hold the sizzle location</string>
    <string name="toast_sizzle_name_empty">Sizzle name is empty</string>
    <string name="toast_sizzle_address_empty">Address is empty</string>
    <string name="toast_sizzle_detail_empty">Description is empty</string>
    <string name="pick_image_intent_text">Pick an image</string>

    <!--    Screen: Sizzle details   -->
    <string name="sizzle_title">Hindmarsh Bunnings Sizzle</string>
    <string name="rate">Rate</string>
    <string name="sizzle_address">123 Hindmarsh Road, Hindmarsh SA 5002</string>
    <string name="sausage">Sausage</string>
    <string name="bread">Bread</string>
    <string name="onion">Onion</string>
    <string name="sauce">Sauce</string>
    <string name="overall_score">Overall Score</string>
    <string name="comments">Comments</string>
    <string name="snag_score">Snag Score</string>
    <string name="commentString">Comment</string>
    <string name="rate_points_out_of_5">
      <![CDATA[
        <b>%1$s</b>/5
    ]]>
    </string>

    <string name="rate_points_n_a">
      <![CDATA[
        <b>%1$s</b>
    ]]>
    </string>


    <!--    Screen: Rating   -->
    <string name="rating_title">Was this snag worthy?</string>
    <string name="rating_hint">drag over each ingredient to give it a score</string>
    <string name="done">Done</string>

</resources>
