<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue"
    tools:context="com.digitalnoir.snagasnag.SwearActivity">

    <Button
        android:id="@+id/iDoBtn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/popup_bottom_grey"
        android:text="@string/i_do"
        android:textAlignment="center"
        android:textAppearance="@style/TitleTextStyle"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/swearTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/swear_title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginBottom="40dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/iDoBtn"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swearTitle"
        app:srcCompat="@drawable/oath2" />

    <TextView
        android:id="@+id/swearBodyTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:textAlignment="center"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/iDoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/swear_body" />

</android.support.constraint.ConstraintLayout>
