<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rateTitleBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/popup_bottom_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/ratingTitleTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/rating_title"
            android:textAppearance="@style/TitleTextStyle"
            android:textColor="@color/brownLight"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/closeBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp" />

        <ImageButton
            android:id="@+id/closeBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:padding="12dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cross" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/popup_rating_top_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateTitleBtn">


        <ImageView
            android:id="@+id/snagAvatar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_snag_avatar" />

        <TextView
            android:id="@+id/sizzleTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/White"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/snagAvatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sizzle_title" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/add_sizzle_body"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@+id/doneBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/ratingHintTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/rating_hint"
            android:textColor="@color/textColorDarkGrey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/snagScoreConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingHintTv">

            <RatingBar
                android:id="@+id/sausageRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:progressDrawable="@drawable/rating_bar_custom_sausage"
                android:rating="1"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/breadRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:progressDrawable="@drawable/rating_bar_custom_bread"
                android:rating="1"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sausageRatingBar" />

            <RatingBar
                android:id="@+id/onionRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:progressDrawable="@drawable/rating_bar_custom_onion"
                android:rating="1"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/breadRatingBar" />

            <RatingBar
                android:id="@+id/sauceRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:progressDrawable="@drawable/rating_bar_custom_sauce"
                android:rating="1"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/onionRatingBar" />

            <android.support.constraint.Guideline
                android:id="@+id/guidelineVertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="259dp" />

            <TextView
                android:id="@+id/sausageTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sausage"
                app:layout_constraintBottom_toBottomOf="@+id/sausageRatingBar"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sausageRatingBar" />

            <TextView
                android:id="@+id/breadTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/bread"
                app:layout_constraintBottom_toBottomOf="@+id/breadRatingBar"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/breadRatingBar" />

            <TextView
                android:id="@+id/onionTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/onion"
                app:layout_constraintBottom_toBottomOf="@+id/onionRatingBar"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/onionRatingBar" />

            <TextView
                android:id="@+id/sauceTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sauce"
                app:layout_constraintBottom_toBottomOf="@+id/sauceRatingBar"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sauceRatingBar" />


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/overallScoreConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/add_sizzle_edit_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/snagScoreConstraintLayout">


            <TextView
                android:id="@+id/overallScoreTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/overall_score"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/totalScoreTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="4.2/5" />

        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>


    <Button
        android:id="@+id/doneBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/popup_bottom_grey"
        android:textAppearance="@style/TitleTextStyle"
        android:textColor="@color/White"
        android:text="@string/done"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>