<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/add_sizzle_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dartImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dart_grey" />

        <TextView
            android:id="@+id/addSizzleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_a_sizzle"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dartImage"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cross" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/add_sizzle_body"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@+id/snagItBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <TextView
                    android:id="@+id/noteLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    android:singleLine="false"
                    android:text="@string/add_sizzle_note"
                    android:textColor="@color/textColorDarkGrey"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/add_sizzle_edit_text"
                    android:ems="10"
                    android:hint="@string/hint_sizzle_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/noteLabel" />

                <EditText
                    android:id="@+id/addressEditText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/add_sizzle_edit_text"
                    android:ems="10"
                    android:textSize="16sp"
                    android:hint="@string/hint_sizzle_address"
                    android:inputType="textCapSentences"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

                <EditText
                    android:id="@+id/descEditText"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/add_sizzle_edit_text"
                    android:ems="10"
                    android:textSize="16sp"
                    android:hint="@string/hint_sizzle_desc"
                    android:inputType="textCapSentences"
                    android:paddingBottom="80dp"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addressEditText" />


                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/add_sizzle_plus_icon"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descEditText"
                    app:srcCompat="@drawable/ic_plus"
                    android:layout_marginLeft="8dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/add_a_snag_cover_photo"
                    android:textAppearance="@style/TitleTextStyle"
                    app:layout_constraintBottom_toBottomOf="@+id/imageButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageButton"
                    app:layout_constraintTop_toTopOf="@+id/imageButton"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="16dp" />

                <Button
                    android:id="@+id/addSizzleBtn"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/imageButton"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/imageButton"
                    app:layout_constraintTop_toTopOf="@+id/imageButton"
                    android:layout_marginRight="8dp" />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/snagItBottom"
        android:text="@string/snag_it"
        android:textAppearance="@style/TitleTextStyle"
        android:textSize="18sp"
        android:textColor="@color/brownLight"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/popup_bottom_yellow"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>